assets/css/style.css
@import url('https://fonts.googleapis.com/css2?family=Lobster&family=Montserrat&display=swap');

/*
font-family: 'Lobster', cursive;
font-family: 'Montserrat', sans-serif;  ------ need to find better 2nd font to match heading font
*/

/*general*/
*{
    margin: 0;
    padding: 0;
    border: 0;
}

/*for image background*/

body, html {
  height: 100%;
  font-family: 'Montserrat', sans-serif;
}

.inner-container {
    margin-left: 15px;
    margin-right: 15px;
    margin-bottom: 15px;
    width: auto;
    
}

.bg-image{
    background-image: url(../Images/pexels-maureen-bekker-1207978.jpg);  /*unsure about image - might change!*/
    height: 100%;
    background-position: center;
    background-repeat: no-repeat;
    background-size: cover;
}

h1, h2, h3, h4{
    font-family: 'Lobster', cursive;
     color: #31315b;
     font-weight: 900;
      line-height: 48px;
}

ul {
    list-style-type: none;
}


.home-page-button{
    border: 2px groove #31315b;
    margin: 10px 20px 0;
    color: rgb(166, 172, 194);
    font-weight: 800;
    background-color: #31315b;
    padding: 5px 10px;
    border-radius: 5px;
}


/* Nav bar*/

.nav-container{
    margin: 30px 15px;
    background-color: rgb(166, 172, 194, 0.8); /*unsure about color - might change along with image!*/
    border: 2px groove #31315b;
    font-family: 'Lobster', cursive;
    font-weight: 900;
    color: #3A4149;
}

.navbar-brand, .navbar-nav{
    line-height: 48px;
}

.nav-container .navbar-light .navbar-brand {
    color: #31315b;
    font-size: 40px;
}

.nav-container .navbar-light .navbar-nav .nav-link {
    font-size: 20px;
    display: inline-block;
}

.nav-container .navbar-light .navbar-nav .nav-link {
    color: rgb(49, 49, 82, 0.8); /*same color as #31315b but with some opacity for non active links*/
}

.nav-container .navbar-light .navbar-nav .nav-link:hover {
    color: #31315b;
    text-decoration: underline;
}

.nav-container .navbar-light .navbar-nav .active>.nav-link {
    color: #31315b;
    text-decoration: underline;
    font-size: 22px;
}

/* Home page accordion */

.accordion>.card {
    background-color: rgb(166, 172, 194, 0.8);
    color: inherit;
    border: 2px groove #31315b;
}

.card-body{
    background-color: rgb(170, 190, 197, 0.2);
    border-top: 2px groove #31315b;
    color: #31315b;
    font-family: 'Montserrat', sans-serif;
    text-align: center;
    font-size: 16px;
    font-weight: 700;
}

.accordion>.card .btn-link{
    color: #31315b;
    font-weight: 900;
    font-size: 24px;
    font-family: 'Lobster', cursive;
}

/*Game page*/

section.inner-container{
    background: cover;
    height: 100%;
    text-align: center;
    background-color: rgb(166, 172, 194, 0.8)
}

#game-area{
    border: 2px groove #31315b;
    height: 100%;
    margin-bottom: 15px;
}

.btn-group button{
    border: 2px groove #31315b;
    width: 180px;
    margin: 5px 20px 0;
    color: #31315b;
    font-weight: 800;
    background-color: rgb(166, 172, 194)   
}
.active-level{
    color: rgb(166, 172, 194);
    background-color: #31315b;
    border: 2px  #31315b;
}

/*added as after clicking button it would turn grey from bootstrap styling*/
.btn-group button.btn.btn-secondary:focus {
    color: rgb(166, 172, 194);
    background-color: #31315b;
    border: 2px  #31315b;
}

.btn-group button.btn.btn-secondary:hover, .start-button:hover {
    color: rgb(166, 172, 194);
    background-color: #31315b;
    border: 2px  #31315b;
}

.start-button {
    border: 2px groove #31315b;
    color: #31315b;
    font-weight: 900;
    background-color: rgb(166, 172, 194);
    padding: 5px 115px;
    margin-top: 20px;
}

